# Fruteria-los-papus

./: README.md  app.py  pyproject.toml  requirements.txt
templates/: base.html  index.html  inventario.html  login.html  registro.html
